@@ -1,0 +1,13 @@
+From: %(recipient_address)s
+Subject: failure notice
+
+Hi. This is the TMDA program at %(recipient_domain)s.
+I'm afraid I wasn't able to deliver your message to the following addresses.
+This is a permanent error; I've given up. Sorry it didn't work out.
+
+<%(recipient_address)s>:
+%(bounce_text)s
+
+--- Enclosed is a copy of your message.
+
+%(original_message)s
